# Digit-Recognition-Model

./: .gitignore  LICENSE  Makefile  README.md  app.py  layer.py  mnist.py  network.py  pyproject.toml  utils.py
src/: model.py
src/HDRM/: core.py  model.py  neuron.py
templates/: index.html
